# archiplotterXL

./: .gitignore  LICENSE  README.md
ArchiSlicer/: README.md
ArchiSlicer/backend/: .pre-commit-config.yaml  Makefile  README.md  alembic.ini  crud.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  seed.py
ArchiSlicer/backend/alembic/: env.py
ArchiSlicer/backend/alembic/versions/: 47c53e5597d7_add_tool_presets_table.py  a1b2c3d4e5f6_add_projects_table.py  b2c3d4e5f6a7_add_project_versioning.py  b748509b6d21_create_pen_types_table.py  c3d4e5f6a7b8_add_version_message.py  d4e5f6a7b8c9_add_pen_type_width.py
ArchiSlicer/backend/repositories/: __init__.py  memory.py  sqlalchemy.py
ArchiSlicer/backend/routers/: infill.py  pen_types.py  projects.py  tool_presets.py
ArchiSlicer/backend/services/: __init__.py  centerline_extractor.py  geometry_utils.py  infill_patterns.py  path_optimizer.py
ArchiSlicer/backend/services/centerline/: __init__.py  extractor.py  service.py  smoothing.py
ArchiSlicer/backend/services/geometry/: __init__.py  utils.py
ArchiSlicer/backend/services/infill/: __init__.py  patterns.py  service.py  utils.py
ArchiSlicer/backend/services/optimization/: __init__.py  path_optimizer.py  service.py
ArchiSlicer/backend/tests/: conftest.py  test_pen_types.py  test_tool_presets.py
ArchiSlicer/frontend/: .env.development  index.html  package-lock.json  package.json  tsconfig.node.json
ArchiSlicer/frontend/public/: macros.json
ArchiSlicer/frontend/scripts/: convert-macros.ts
Firmware/: Duet3Firmware_Mini5plus.uf2
Firmware/Drucker/: firmware.hex
Gcodes/: 16g.gcode  Archiplotter_8_Farben.gcode  Archiplotter_8_Farben_4.gcode  Archiplotter_8_Farben_noPost.gcode  fight.gcode
Makros/: close_grabber  demo.g  grab_tool_1  grab_tool_2  grab_tool_3  grab_tool_4  grab_tool_5  grab_tool_6  grab_tool_7  grab_tool_8  grabber_close  grabber_demo  grabber_open  move_in_front_of_tools  move_to_drawingHeight_marker  move_to_drawingHeight_stabilo  move_to_tool_1  open_grabber  place_tool  place_tool_1  place_tool_2  place_tool_3  place_tool_4  place_tool_5  place_tool_6  place_tool_7  place_tool_8  pumpen  strich_machen  take_tool
Postprocessing/: ArchiplotterUpscale_postprocess_Prusaslicer 2.py  ArchiplotterUpscale_postprocess_Prusaslicer.py  ArchiplotterUpscale_postprocess_Prusaslicer_04.09.2022.py  ArchiplotterUpscale_postprocess_Prusaslicer_No_Pump_03.02.2023.py  ArchiplotterUpscale_postprocess_Prusaslicer_old_30.06.2022.py
PrusaSlicer/: Archiplotter_8_Farben.3mf  PrusaSlicer_8_colors_config_bundle.ini
SystemFolder/: bed.g  config.g  config.g.bak  config.json  dwc-settings.json  heightmap.csv  heightmap_01.csv  heightmap_02.csv  heightmap_03_mit_korrekter_z.csv  heightmap_angehoben_01.csv  heightmap_before_small_setup.csv  heightmap_erste_20_transparente.csv  heightmap_papier.csv  heightmap_small_setup_01.csv  heightmap_small_setup_02.csv  heightmap_small_setup_03.csv  heightmap_small_setup_04.csv  heightmap_small_setup_05.csv  homeall.g  homeu.g  homex.g  homey.g  homez.g  pause.g  resume.g  sleep.g  stop.g  tfree0.g  tpost0.g  tpre0.g
stringart/: points.csv  stringart.py
(+33 files in other folders)
